--- a/public/styles.css
+++ b/public/styles.css
@@ -1,19 +1,16 @@
-body 
-{
+body {
     font-family: sans-serif;
-    margin: 30px;
 }
-
-.container
-{
-    min-width: 310px; 
-    height: 600px; 
-    padding: 10px;
-    margin: 50px auto;
-    border: 1px solid grey;   
+.container{
+    min-width: 310px;
+    height: 450px;
+    margin: 15px 1em;
+    margin-bottom: 100px;
+    border: 2px black solid;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-
-#stadiums
-{
-    height: 1000px;
+h1{
+    display: flex;
+    justify-content: center;
 }
